plugins {
    id 'java-library'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'maven-publish'
}

group = 'ru.isupden'
version = '0.0.2-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly  'jakarta.annotation:jakarta.annotation-api:2.1.1'
    api          'io.temporal:temporal-sdk:1.29.0'
    compileOnly  'org.springframework.boot:spring-boot-autoconfigure'
    compileOnly  'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly    'org.junit.platform:junit-platform-launcher'
}

tasks.named('bootJar') { enabled = false }
tasks.named('jar')    { enabled = true  }

publishing {
    publications {
        register("mavenJava", MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            name = "github"
            url = uri("https://maven.pkg.github.com/IsupDen/temporal-sheduller")
            credentials {
                username = System.getenv("USERNAME")
                password = System.getenv("TOKEN")
            }
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
